--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field form-group">
+  <div class="field form-group" style="margin-bottom: 10px">
     <%= f.email_field :email, placeholder:"Email", autofocus: true, autocomplete: "email" %>
   </div>
 
@@ -11,7 +11,7 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field form-group">
+  <div class="field form-group" style="margin-bottom: 10px">
     <%= f.password_field :password, placeholder:"New Password", autocomplete: "new-password" %>
     <% if @minimum_password_length %>
       <br />
@@ -31,11 +31,13 @@
   <br/>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Update", class:"btn btn-dark" %>
   </div>
 <% end %>
 
+</p>
 
-<%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+<%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"btn btn-danger"%></p>
 
 <%= link_to "Back", :back %>
