--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -1,12 +1,22 @@
 
+<!-- Date Range Picker -->
+<div class="d-flex justify-content-end">
+  <input type="text" id="picker" class="form-control text-center" style="width: 220px" name="daterange" value="">
+    <script>
+      $('#picker').daterangepicker();
+    </script>
+</div> 
+<br/>
+<!---->
+
 <table class="table table-striped table-bordered table-hover">
   <thead class="table-dark">
+
     <tr>
       <th>Date</th>
       <th>Time In</th>
       <th>Time Out</th>
       <th>Shift Duration</th>
-
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,7 +29,6 @@
           <td><%= shift.time_in.to_fs(:time) %></td>
           <td><%= shift.time_out.to_fs(:time) %></td>
           <td><%= shift_duration_formatted(shift_duration_in_min(shift.time_in, shift.time_out))%></td>
-
           <td><%= link_to 'Edit', edit_shift_path(shift) %></td>
           <td><%= button_to "Delete", shift, method: :delete, form: { data: { turbo_confirm: "Are you sure?" }  } %></td>
         </tr>
