--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -1,4 +1,3 @@
-
 <!-- Date Range Picker -->
 <div class="d-flex justify-content-end">
   <input type="text" id="picker" class="form-control text-center" style="width: 220px" name="daterange" value="">
@@ -9,9 +8,8 @@
 <br/>
 <!---->
 
-<table class="table table-striped table-bordered table-hover">
+<table id="user_shifts" class="table table-striped table-bordered table-hover">
   <thead class="table-dark">
-
     <tr>
       <th>Date</th>
       <th>Time In</th>
@@ -19,8 +17,8 @@
       <th>Shift Duration</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
 
+  </thead>
     <tbody>
       <% @shifts.each do |shift| %>
         <% if shift.user == current_user %>
@@ -36,5 +34,15 @@
       <% end %>
     </tbody>
   </table>
+
+  <!-- TESTS -->
+
+  <% @shifts.each do |shift| %>
+    <% if shift[:date] == Date.today %>
+      <%= shift.date.to_fs(:rfc822) %>
+    <% end %>
+  <% end %>
+
+  <!-- END OF TESTS -->
 
 <%= link_to "New shift", new_shift_path, class:"btn btn-dark" %>
