--- a/app/views/shifts/_filter_form.html.erb
+++ b/app/views/shifts/_filter_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(:search, class: 'form-inline', url: shifts_path, method: :get, remote: true) do |form| %>
   <div class="form-group">
-    <%= form.label :date %>
+    <% form.label :date %>
     <%= form.text_field :date, class: 'form-control', data: { behavior: 'daterangepicker' }, value: date_from_parameters %>
   </div>
-  <%= form.submit "Search", class: 'btn btn-success' %>
+  <div class="search-button"><%= form.submit "Search", class: 'btn btn-secondary rounded-sm' %></div>
 <% end %>
