--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -6,7 +6,7 @@
 <br/>
 <!---->
 
-<table id="user_shifts" class="table table-striped table-bordered table-hover">
+<table id="user_shifts" class="table table-bordered">
   <thead class="table-dark">
     <tr>
       <th>Date</th>
@@ -25,11 +25,17 @@
           <td><%= shift.time_in.to_fs(:time) %></td>
           <td><%= shift.time_out.to_fs(:time) %></td>
           <td><%= shift_duration_formatted(shift_duration_in_min(shift.time_in, shift.time_out))%></td>
-          <td><%= link_to 'Edit', edit_shift_path(shift) %></td>
-          <td><%= button_to "Delete", shift, method: :delete, form: { data: { turbo_confirm: "Are you sure?" }  } %></td>
+          <td class="edit-button"><%= link_to 'Edit', edit_shift_path(shift) %></td>
+          <td class="delete-button"><%= button_to "Delete", shift, method: :delete, form: { data: { turbo_confirm: "Are you sure?" }  } %></td>
         </tr>
         <% end %>
       <% end %>
+        <tr>
+          <td></td>
+          <td></td>
+          <td style="text-align: right; font-weight: 700;">TOTAL</td>
+          <td style="font-weight: 700;"><%= total_time %></td>
+        </tr>
     </tbody>
   </table>
 
